Modified dropdown contents of navbar

--- a/index.html
+++ b/index.html
@@ -31,15 +31,21 @@
           <a href="#">T-Shirts</a>
           <a href="#">Polo Shirts</a>
           <a href="#">Button-Down Shirts</a>
+          <a href="#">Jeans and Pants</a>
+          <a href="#">Coats and Jackets</a>
+          <a href="#">Hoodies and Sweatshirts</a>
         </div>
       </li>
       <li class="dropdown">
         <a href="#" class="dropbtn">Women
           <i class="fa fa-caret-down"></i></a>
         <div class="dropdown-menu">
-          <a href="#">T-Shirts</a>
-          <a href="#">Polo Shirts</a>
-          <a href="#">Button-Down Shirts</a>
+          <a href="#">Lawn</a>
+          <a href="#">Jacquard</a>
+          <a href="#">Cotton</a>
+          <a href="#">Hand Woven</a>
+          <a href="#">Hoodies and Sweaters</a>
+          <a href="#">Coats and Jackets</a>
         </div>
       </li>
       <li><a href="#">Contact Us</a></li>
