added slider and search bar

--- a/index.html
+++ b/index.html
@@ -53,11 +53,30 @@
         <a href="#"><i class='fas fa-user-circle' style='font-size:20px'></i></a></li>
       <li>
         <a href="#"><i class="fas fa-shopping-cart" style="font-size:20px"></i></a></li>
-
     </ul>
   </nav>
   <!-- Navbar code ends here -->
 
+  <div class="search">
+    <input class="search-field" type="text" name="srch" id="srch">
+    <label><i class="fa fa-search" style="font-size: 20px; color: #919191;"></i></label>
+  </div>
+
+  <!-- Slider code starts here -->
+  <div>
+    <img src="images/slider.jpg" alt="slider-img" width="100%">
+  </div>
+  <!-- Slider code ends here -->
+
+  <div class="section-below-slider">
+    <h2>New Arrivals</h2>
+    <div class="new-arrivals">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+    </div>
+  </div>
 </body>
 
 </html>
