Modified search bar and added sections below slider

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Home</title>
+  <title>CC Vesture</title>
   <link rel="icon" href="images/logo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
         <div class="dropdown-menu">
           <a href="#">T-Shirts</a>
           <a href="#">Polo Shirts</a>
-          <a href="#">Button-Down Shirts</a>
+          <a href="#">Formal Dress Shirts</a>
           <a href="#">Jeans and Pants</a>
           <a href="#">Coats and Jackets</a>
           <a href="#">Hoodies and Sweatshirts</a>
@@ -57,24 +57,49 @@
   </nav>
   <!-- Navbar code ends here -->
 
-  <div class="search">
-    <input class="search-field" type="text" name="srch" id="srch">
-    <label><i class="fa fa-search" style="font-size: 20px; color: #919191;"></i></label>
-  </div>
+
 
   <!-- Slider code starts here -->
-  <div>
+
+  <div class="slider">
     <img src="images/slider.jpg" alt="slider-img" width="100%">
+    <div class="search">
+      <input class="search-field" type="text" name="srch" id="srch">
+      <i class="fa fa-search search-icon"></i>
+    </div>
   </div>
   <!-- Slider code ends here -->
-
   <div class="section-below-slider">
-    <h2>New Arrivals</h2>
-    <div class="new-arrivals">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
+    The Best and Trending Clothing Collection
+    <br><br><br>
+    <button>Men's Shop</button>
+    <button>Women's Shop</button>
+  </div>
+  <h2 class="featured-text">Men's Featured</h2>
+  <div class="featured-clothes">
+    <div>
+      <button><img src="images/for1.png" alt="formal-shirt"></button><br>
+      Mens plain black formal dress shirt <br><br> $50
+    </div>
+    <div>
+      <button><img src="images/t1.png" alt="t-shirt"></button><br>
+      Mens plain black T-Shirt <br><br> $21
+    </div>
+    <div>
+      <button><img src="images/polo1.png" alt="polo-shirt"></button><br>
+      Mens plain black polo shirt <br><br> $39
+    </div>
+    <div>
+      <button><img src="images/for1.png" alt="formal-shirt"></button><br>
+      Mens plain black formal dress shirt <br><br> $50
+    </div>
+    <div>
+      <button><img src="images/t1.png" alt="t-shirt"></button><br>
+      Mens plain black T-Shirt <br><br> $21
+    </div>
+    <div>
+      <button><img src="images/polo1.png" alt="polo-shirt"></button><br>
+      Mens plain black polo shirt <br><br> $39
     </div>
   </div>
 </body>
