Done with Login and sign-up page

--- a/pages/login.html
+++ b/pages/login.html
@@ -19,18 +19,14 @@
     <div class="center">
     
     <fieldset>
+        <center><h2>LOGIN</h2><br><br></center>
         <legend><img id="logo" src="logo.png"></legend>
-        <h2>Sign-up</h2><br><br>
-        <label for="name">Enter fullname : </label>
-        <input type="text" id="name" name="name"><br>
-        <label for="contact">Contact : </label>
-        <input type="text" name="contact" id="contact"><br>
-        <label for="email">Email : </label>
-        <input type="email" id="email" name="email"><br>
-        <label>Password : </label>
+        <label>Email : </label><br>
+        <input type="email" id="email"><br>
+        <label>Password : </label><br>
         <input type="password" id="pass"><br>
-        <input type="button" class="signup" name="signup" value="Sign-up">
-        <a href="login.html"><h5><-Log-in </h5></a>
+        <input type="button" name="Login" value="Login">
+        <a href="signup.html"><input type="button" class="signup" name="signup" value="Sign-up"></a>
     </fieldset>
     </div>
 
